Store positions according to uploaded image
